# yan-pm-cli

./: .gitignore  Cargo.toml  README.md  SKILL.md
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
crates/yan-pm/: Cargo.toml  build.rs
crates/yan-pm/src/: lib.rs  main.rs
crates/yan-pm/src/agent/: backend.rs  mod.rs  registry.rs  session.rs  state.rs
crates/yan-pm/src/agent/backends/: claude.rs  codex.rs  gemini.rs  mod.rs
crates/yan-pm/src/api/: client.rs  error.rs  mod.rs  types.rs
crates/yan-pm/src/cli/: agents.rs  auto_run.rs  daemon.rs  dashboard.rs  detect.rs  issue.rs  login.rs  mod.rs  project.rs  pull.rs  self_update.rs  setup.rs  spec.rs  start.rs  sync.rs  task.rs  verify.rs  workspace.rs
crates/yan-pm/src/config/: config.rs  mod.rs  workspace.rs
crates/yan-pm/src/daemon/: auto_runner.rs  event_store.rs  event_uploader.rs  file_watcher.rs  heartbeat.rs  mod.rs  pid.rs  process.rs  service.rs  state.rs  sync_manager.rs
crates/yan-pm/src/local/: directory.rs  issuefile.rs  mod.rs  specfile.rs  task_parser.rs  taskfile.rs
crates/yan-pm/src/mcp/: mod.rs
crates/yan-pm/src/output/: format.rs  mod.rs
crates/yan-pm/src/runner/: mod.rs
crates/yan-pm/src/sync/: engine.rs
crates/yan-pm/src/tui/: app.rs  mod.rs  ui.rs
crates/yan-pm/tests/: agent_backend_test.rs  connection_state_test.rs  event_store_test.rs  integration_test.rs
docs/: install.md  setup-command-design.md  setup-command-impl-plan.md
docs/devlogs/: 2026-03-28-architecture-upgrade.md  2026-03-28-dashboard-agents.md
docs/lessonlearned/: pre-commit-hook-bootstrap.md
docs/plans/: 2026-03-28-architecture-upgrade-impl.md  2026-03-28-iteration-dashboard.md  2026-03-28-yan-pm-cli-architecture-upgrade.md  2026-03-29-iteration-observability.md  2026-03-29-observability-dev-plan.md  2026-03-31-phase2-cli-local-sdd.md  2026-04-01-distribution-channels.md
docs/spec/agent/: README.md
docs/spec/daemon/: README.md
docs/spec/local-sdd/: README.md
docs/spec/observability/: README.md
docs/spec/setup/: README.md
