[package]
name = "yan-pm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "YanChat 项目管理 CLI — 终端管理任务 + MCP stdio 桥接"

[[bin]]
name = "yan-pm"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4.6", features = ["derive", "env"] }

# Async
tokio = { version = "1", features = ["full"] }

# HTTP
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Terminal
colored = "3"
comfy-table = "7"

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Browser open
open = "5"

# Random
rand = "0.9"

# Hostname
hostname = "0.4"

# ACP (Agent Client Protocol)
agent-client-protocol = "0.10"
tokio-util = { version = "0.7", features = ["compat"] }
futures = "0.3"
async-trait = "0.1"

# Config
toml = "0.8"

# File watching (daemon)
notify = "8"
notify-debouncer-mini = "0.6"

# Signal handling
signal-hook = "0.3"

# Self-update (manual: Gitee releases)
flate2 = "1"
tar = "0.4"
self-replace = "1"

[target.'cfg(windows)'.dependencies]
zip = "2"

# Unix process management
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
mockito = "1"
assert_cmd = "2"
predicates = "3"
tempfile = "3"
